vNEXT (in development)

  * Simplified how messages are constructed.
    Instead of: client.send(joinMessage("#channel"))
    Now use: client.sendJoin("#channel")
  * Added reply utility to easily send replies to message events
  * Server state improvements:
    * Added status field to ServerState
    * ServerConnected event is emitted as soon as the socket is connected

v0.2.1

  * Added documentation and reduced visibility of some internal methods/classes
  * (Internal) Enabled Travis, Codacy and Coveralls

v0.2.0

  * Added support for connecting over TLS
  * Simplified how event handlers are registered
  * Improved use of coroutines so users don't have to worry about them
  * (Internal) Upgraded to Gradle 5.1.1