@@ -5,10 +5,11 @@ import com.dmdirc.ktirc.messages.sendPong
 
 internal class PingHandler : EventHandler {
 
-    override fun processEvent(client: IrcClient, event: IrcEvent) {
+    override fun processEvent(client: IrcClient, event: IrcEvent): List<IrcEvent> {
         when (event) {
             is PingReceived -> client.sendPong(event.nonce)
         }
+        return emptyList()
     }
 
 }
